2002-01-28 Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: const, MacOS fixes (also thanks Daniel Steffen).

2001-12-07 Vince Darley <vincentdarley@sourceforge.net>
	* various test, install fixes (unix) thanks to Larry Virden.
	
2001-12-02 Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: minor code cleanup and simplification. Fix
	to problem with absolute paths on unix systems introduced in
	recent changes.
	
2001-11-21 Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: added more comments to the code, and 
	made mount point checking faster and simpler (we no longer
	need to modify strings temporarily).
	
2001-11-09 Vince Darley <vincentdarley@sourceforge.net>
	* tests/vfs*.test: better tests; more platform independent.

2001-11-08  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: made code thread-safe.  Disallow
	safe interpreters from using vfs code since they can then
	mess with the filesystem across all interpreters.

2001-11-07  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: all mount information is now stored in a
	purpose built data structure ('vfs::mount' variable is gone),
	and the code handles multiple interpreters in a very robust
	fashion.  Fixes crashing problem in pkg_mkIndex and
	general inconsistencies with multiple interps.  Also, the 
	'-volume' flag is no longer required for unmounting.  Lastly
	added a lot more documentation in the code.
	* library/vfsUrl.tcl: remove '-volume' flag.
	* tests/vfs*.test: various new tests added
	* doc/vfs.n: documentation much improved, especially with
	respect to multiple interpreters.

2001-11-01  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: 'vfs::mount' no longer a string-literal
	* tests/vfs*.test: various new tests added
	
2001-10-31  Vince Darley <vincentdarley@sourceforge.net>
	* examples/simpleExamples.tcl: a demo
	* doc/vfslib.n: some documentation on the 'library' code.
	